Add pagination to subscription overview

--- a/layout/less/main.less
+++ b/layout/less/main.less
@@ -14,3 +14,6 @@ h3 {color: @colorSecondary}
 h4 {color: @colorPrimary}
 
 nav #navigation li a {border-left: 1px solid lighten(@colorPrimary, 20%); border-right: 1px solid lighten(@colorPrimary, 20%)}
+
+.pagination li a {border-color: @colorPrimary; color: @colorPrimary;}
+.pagination li.active a {background-color: @colorPrimary; color: #FFF; border-color: @colorPrimary}
